[package]
name = "yarnballs"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "yarnballs"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.23"
rand = "0.8.5"
rustler = "0.26.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
